--- a/css/style.css
+++ b/css/style.css
@@ -18,16 +18,22 @@ body{
 
 .navigate{
     display: flex;
-    text-indent: 20px;
+    text-indent: 30px;
 }
 
 .navitems ul li {
     list-style-type: none;
+
 }
 
 .navitems ul li a{
     text-decoration: none;
+    font-size: 18px;
+    color: #E5E7EB;
 }
+.logo p{
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #F9FAF8;
 
-
-
+}
