--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,68 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
-body{
-    font-family: 'Roboto', sans-serif;
+body {
+	font-family: "Roboto", sans-serif;
 }
-.sub-cont{
-    background: #1F2937;
-   
-}
-
-.header{
- 
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    
+.sub-cont {
+	background: #1f2937;
 }
 
-.navigate{
-    display: flex;
-    text-indent: 30px;
+.header {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.navigate {
+	display: flex;
+	text-indent: 30px;
 }
 
 .navitems ul li {
-    list-style-type: none;
-
+	list-style-type: none;
 }
 
-.navitems ul li a{
-    text-decoration: none;
-    font-size: 18px;
-    color: #E5E7EB;
+.navitems ul li a {
+	text-decoration: none;
+	font-size: 18px;
+	color: #e5e7eb;
 }
-.logo p{
-    font-size: 24px;
-    font-weight: extra-bold;
-    color: #F9FAF8;
-
-}
-
-.body-cont{
-    margin-top: 120px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.logo p {
+	font-size: 24px;
+	font-weight: extra-bold;
+	color: #f9faf8;
 }
 
-.website .website-header{
-    font-size: 48px;
-    font-family: extra-bold;
-    color: #F9FAF8;
+.body-cont {
+	margin-top: 120px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.website .website-header {
+	font-size: 48px;
+	font-family: extra-bold;
+	color: #f9faf8;
+}
+
+.sub-header {
+	font-size: 18px;
+	color: #e5e7eb;
+}
+
+.sign {
+	background: #3883f6;
+	color: white;
+	border: none;
+	font-size: 16px;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 4px;
+	text-decoration: none;
+	text-align: center;
+	width: 150px;
+	height: 40px;
 }
