--- a/css/style.css
+++ b/css/style.css
@@ -90,3 +90,12 @@ body {
     text-align: center;
     margin-top: 1rem;
 }
+.subtext{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.class="random-image"{
+    
+}
