--- a/css/style.css
+++ b/css/style.css
@@ -118,8 +118,18 @@ body {
     height: 15rem;
 }
 .inspire{
+    padding-top: 4rem;
     text-align: center;
     font-size: 20px;
     font-style: italic;
     color: #1F2937;
+    direction: ltr;
+}
+
+.inspire.quotes{
+    margin-top: 3rem;
+}
+.gud{
+    font-weight: bold;
+    margin-left: 51rem;
 }
