--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 .sub-cont {
 	background: #1f2937;
-    height: 30rem;
+	height: 30rem;
 }
 
 .header {
@@ -55,7 +55,7 @@ body {
 }
 
 .sign {
-    margin-top: 9px;
+	margin-top: 9px;
 	background: #3883f6;
 	color: white;
 	border: none;
@@ -69,81 +69,82 @@ body {
 	height: 40px;
 }
 
-.place-holder{
-    height: 14rem;
-    width: 25rem;
-    background-color: #C1C1C1;
-    
-    
+.place-holder {
+	height: 14rem;
+	width: 25rem;
+	background-color: #c1c1c1;
 }
 
-.holder{
-    color: #f9faf8;
-    margin-top: 6rem;
-    margin-left: 5rem;
+.holder {
+	color: #f9faf8;
+	margin-top: 6rem;
+	margin-left: 5rem;
 }
 
-.info-random{
-    color: #1F2937;
-    font-weight: bold;
-    font-size: 36px;
-    text-align: center;
-    margin-top: 1rem;
-    padding-top: 2rem;
+.info-random {
+	color: #1f2937;
+	font-weight: bold;
+	font-size: 36px;
+	text-align: center;
+	margin-top: 1rem;
+	padding-top: 2rem;
 }
-.subtext{
-    width: 43rem;
+.subtext {
+	width: 43rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: 21rem;
+	gap: 2rem;
+	padding-top: 2rem;
+}
+.middle-cont {
+	height: 26rem;
+}
+.random-image {
+	width: 12rem;
+}
+
+.subtext1 p {
+	color: #65676b;
+	text-align: center;
+}
+
+.thunder {
+	background: #e5e7eb;
+	height: 15rem;
+}
+.inspire {
+	padding-top: 4rem;
+	text-align: center;
+	font-size: 20px;
+	font-style: italic;
+	color: #1f2937;
+	direction: ltr;
+}
+
+.inspire.quotes {
+	margin-top: 3rem;
+}
+.gud {
+	font-weight: bold;
+	margin-left: 51rem;
+}
+.call {
+	height: 25rem;
+}
+.call-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 21rem;
-    gap: 2rem;
-    padding-top: 2rem;
-}
-.middle-cont{
-    height: 26rem;
-}
-.random-image{
-    width: 12rem;
-
-}
-
-.subtext1 p{
-    color: #65676b;
-    text-align: center;
-}
-
-.thunder{
-    background: #E5E7EB;
-    height: 15rem;
-}
-.inspire{
-    padding-top: 4rem;
-    text-align: center;
-    font-size: 20px;
-    font-style: italic;
-    color: #1F2937;
-    direction: ltr;
-}
-
-.inspire.quotes{
-    margin-top: 3rem;
-}
-.gud{
-    font-weight: bold;
-    margin-left: 51rem;
-}
-.call{
-    height: 25rem
-}
-.call-container{
-    width:35rem;
-    background: #3882F6;
-    height: 10rem;
-    margin-top: 4rem;
-    
+	width: 35rem;
+	background: #3882f6;
+	height: 10rem;
+	margin-top: 4rem;
+    margin-left: 25rem;
 }
 .call-action{
+	padding: 1rem;
+}
+
+.action{
     
-    height: 8rem;
 }
