--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@ body {
 
 .header {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
+	padding: 10px 110px;
 }
 
 .navigate {
