--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,9 @@ body {
 }
 .random-image {
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
+	
 }
 
 .subtext1 p {
